# socratiq

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  start.sh
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: c1d2e3f4a5b6_add_lifecycle_fields_to_source_tasks.py
backend/app/: config.py  main.py
backend/app/agent/: mentor.py
backend/app/agent/prompts/: mentor.py  mentor_system.md  profile_analysis_system.md  profile_analysis_user.md
backend/app/agent/tools/: base.py  exercise.py  knowledge.py  memory.py  profile.py  progress.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  chat.py  courses.py  diagnostic.py  exercises.py  knowledge_graph.py  model_routes.py  models.py  progress.py  reviews.py  setup.py  sources.py  tasks.py  translations.py
backend/app/db/models/: __init__.py  concept.py  content_chunk.py  course.py  episodic_memory.py  lab.py  llm_usage_log.py  model_config.py  source.py  source_task.py  user.py
backend/app/models/: chat.py  course.py  diagnostic.py  lesson.py  lesson_blocks.py  model_schemas.py  source.py
backend/app/services/: auth.py  content_analyzer.py  cost_guard.py  course_generator.py  diagnostic.py  embedding.py  exercise.py  knowledge_graph.py  lab_generator.py  lesson_generator.py  profile.py  rag.py  source_tasks.py  teaching_asset_planner.py  time_estimator.py  translation.py
backend/app/services/llm/: __init__.py  base.py  codex_provider.py  config.py  encryption.py  openai_compat.py  router.py
backend/app/services/llm/adapters/: stream_adapter.py
backend/app/services/prompts/: content_analysis.md  course_description.md  diagnostic_questions.md  exercise_evaluation.md  exercise_generation.md  lab_generation.md  lesson_generation.md
backend/app/tools/extractors/: __init__.py  asr.py  bilibili.py  youtube.py
backend/app/worker/: celery_app.py  ref_subscriber.py
backend/app/worker/tasks/: content_ingestion.py  course_generation.py  course_regeneration.py  memory_pruning.py
backend/tests/: conftest.py  test_auth_routes.py  test_celery_app.py  test_citations.py  test_content_ingestion.py  test_cost_guard.py  test_course_regeneration.py  test_knowledge_graph.py  test_lab_generator.py  test_lesson_generator.py  test_mentor_agent.py  test_setup.py  test_smoke.py  test_source_tasks.py  test_sources_materials.py  test_teaching_asset_planner.py  test_time_estimator.py  test_user_scoping.py
backend/tests/services/llm/: test_encryption.py  test_openai_compat.py  test_stream_adapter.py
backend/tests/tools/extractors/: test_asr.py  test_bilibili_playlist.py
docs/: QUICKSTART.md
docs/design/: competitive-analysis.md  deep-research.md  product-handbook.md  product-plan-v3.md  prototype-v1.1.jsx  prototype.jsx  system-design.md
docs/prompts/: subproject-b-implementation-prompt.md  subproject-c-implementation-prompt.md
docs/superpowers/plans/: 2026-03-24-subproject-c-agent-frontend.md  2026-03-25-subproject-d-auth-settings.md  2026-03-25-subproject-e-learning-loop.md  2026-03-25-v010-offline.md  2026-03-25-youtube-integration.md
docs/superpowers/specs/: 2026-03-24-subproject-a-infrastructure-design.md  2026-03-24-subproject-b-content-ingestion-design.md  2026-03-25-phase2-design.md  (+2 more)
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/: proxy.ts  test-setup.ts
(+57 files in other folders)
